--- a/src/App.css
+++ b/src/App.css
@@ -584,14 +584,14 @@
 }
 
 .app.flash {
-    animation: flash 0.2s infinite alternate;
+    animation: flash 0.2s infinite alternate ease-in-out;
 }
-  
+
 @keyframes flash {
     from {
         opacity: 1;
     }
     to {
-        opacity: 0;
+        opacity: 0.8;
     }
 }
