--- a/src/TopBar.css
+++ b/src/TopBar.css
@@ -65,3 +65,276 @@
 p b {
   font-size: 17px;
 }
+
+@media screen and (min-width: 1024px) {
+  .top-bar {
+  height: 55px; /* Updated height to 30px */
+  background-color: #333;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 40%; /* External links take up the first 50% */
+}
+
+.links a {
+  margin-right: 5px;
+  margin-top:3px;
+  font-weight: bolder;
+  padding: 5px;
+  font-size: 15px;
+}
+
+.ticker-container {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  width: 100%;
+}
+
+.hmove { 
+  display: flex; 
+}
+.hitem { 
+  display: flex;
+  margin-right: 2px;
+  width: 100%; 
+  flex-shrink: 0; 
+}
+.hwrap {
+  width: 40%;
+}
+
+.ticker-symbol {
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.ticker-value {
+  margin-left: 4px;
+  color:lightgreen;
+  font-weight: lighter;
+  font-size: 14px;
+}
+
+p b {
+  font-size: 14px;
+}
+
+.hmove { 
+  animation: tickerh linear 15s infinite; 
+}
+}
+
+@media screen and (max-width: 1024px) {
+  .top-bar {
+  height: 55px; /* Updated height to 30px */
+  background-color: #333;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%; /* External links take up the first 50% */
+}
+
+.links a {
+  margin-right: 5px;
+  margin-top:3px;
+  font-weight: bolder;
+  padding: 5px;
+  font-size: 15px;
+}
+
+.ticker-container {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  width: 100%;
+}
+
+.hmove { 
+  display: flex; 
+}
+.hitem { 
+  display: flex;
+  margin-right: 2px;
+  width: 100%; 
+  flex-shrink: 0; 
+}
+.hwrap {
+  width: 70%;
+}
+
+.ticker-symbol {
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.ticker-value {
+  margin-left: 4px;
+  color:lightgreen;
+  font-weight: lighter;
+  font-size: 14px;
+}
+
+p b {
+  font-size: 14px;
+}
+
+.hmove { 
+  animation: tickerh linear 10s infinite; 
+}
+}
+
+@media screen and (max-width: 768px) {
+    .top-bar {
+    height: 55px; /* Updated height to 30px */
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 10px;
+  }
+
+  .links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 2px;
+    padding: 3px;
+    background-color: black;
+    width: 100%; /* External links take up the first 50% */
+  }
+
+  .links a {
+    margin-right: 10px;
+    margin-top:3px;
+    font-weight: bolder;
+    padding: 4px;
+    font-size: 12px;
+  }
+
+  .ticker-container {
+    display: flex;
+    align-items: right;
+    justify-content: right;
+    width: 100%;
+  }
+
+  .hmove { 
+    display: flex; 
+  }
+  .hitem { 
+    display: flex;
+    margin-right: 10px;
+    width: 100%; 
+    flex-shrink: 0; 
+  }
+  .hwrap {
+    width: 100%;
+  }
+
+  .ticker-symbol {
+    font-weight: bold;
+    font-size: 12px;
+  }
+  
+  .ticker-value {
+    margin-left: 5px;
+    color:lightgreen;
+    font-weight: lighter;
+    font-size: 12px;
+  }
+  
+  p b {
+    font-size: 12px;
+  }
+
+  .hmove { 
+    animation: tickerh linear 10s infinite; 
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .top-bar {
+    height: 75px; /* Updated height to 30px */
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5px;
+  }
+
+  .links {
+    display: flex;
+    align-items: center;
+    margin-top: 2px;
+    padding: 3px;
+    background-color: black;
+    width: 100%; /* External links take up the first 50% */
+  }
+
+  .links a {
+    margin-right: 10px;
+    margin-top:3px;
+    font-weight: bolder;
+    padding: 4px;
+    font-size: 12px;
+  }
+
+  .ticker-container {
+    display: flex;
+    align-items: right;
+    justify-content: right;
+    width: 100%;
+  }
+
+  .hmove { 
+    display: flex; 
+  }
+  .hitem { 
+    display: flex;
+    margin-right: 10px;
+    width: 100%; 
+    flex-shrink: 0; 
+  }
+  .hwrap {
+    width: 100%;
+  }
+
+  .ticker-symbol {
+    font-weight: bold;
+    font-size: 12px;
+  }
+  
+  .ticker-value {
+    margin-left: 5px;
+    color:lightgreen;
+    font-weight: lighter;
+    font-size: 12px;
+  }
+  
+  p b {
+    font-size: 12px;
+  }
+
+  .hmove { 
+    animation: tickerh linear 10s infinite; 
+  }
+}
